--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,15 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pi-assistant"
-version = "1.0.1"
+version = "1.1.0"
 description = "Wake-word voice assistant with local Whisper and MCP tools."
 readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "MIT"}
 authors = [{name = "Paul Jordan"}]
 dependencies = [
-  "ctranslate2",
-  "faster-whisper",
   "numpy",
+  "openwakeword",
   "requests",
   "sounddevice",
   "websocket-client",
